<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AdPad</string> 
    
    <string name="news_label">News</string>
    <string name="map_label">Map Screen</string>
    <string name="events_label">Events</string>
    <string name="schedule_label">Schedule</string>
    <string name="riders_label">Riders</string>
    <string name="partners_label">Partners</string>
    <string name="share_label">Photos/videos</string>
    <string name="social_label">Social</string>

    <string name="share_label">Share</string>
    <string name="uploads_label">Uploads</string>
                                                                   
    <string name="feed_label">Feed</string>
    <string name="facebook_label">Facebook</string>
    <string name="twitter_label">Twitter</string>
    <string name="youtube_label">Youtube</string>
    <string name="foursquare_label">Foursquare</string>
       
	  <string name="credits_pref_cat_title">Credits</string>
    <string name="ads_pref_title">Show Ads</string>
  	<string name="ads_pref_summary">Show/Hide Ads informations.</string>
  	<string name="about_pref_title">About</string>
  	<string name="about_pref_summary">More informations.</string>
    <string name="about_version">Version %1$s (r%2$s)</string>  
    
</resources>
